# TimberWolf

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  Doxyfile  Doxyfile.in  ISSUE_TEMPLATE.md  LICENSE  README.md  STYLEGUIDE.md  TimberWolf.hpp.in  TimberWolfConfig.cmake.in  classes.plantuml  rustfmt.toml
cpp/: TimberWolf.pc.in  TimberWolfConfig.cmake.in
cpp/docs/uml/: classes.plantuml
cpp/include/TimberWolf/: Core.hpp  FileSystem.hpp  Log.hpp  OpenGL.hpp  TimberWolf.hpp  Window.hpp
crates/wyrd/: Cargo.toml
crates/wyrd/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
include/: Clock.hpp  Color.hpp  ComputeShader.hpp  Console.hpp  ConsoleLogObserver.hpp  Controller.hpp  File.hpp  FileLogObserver.hpp  FragmentShader.hpp  FunctionLogObserver.hpp  GLBufferable.hpp  GameLoop.hpp  GameState.hpp  GameStateManager.hpp  GameStateStore.hpp  GeometryShader.hpp  KeyAction.hpp  KeyMod.hpp  KeyType.hpp  Keybinding.hpp  Log.hpp  LogLevel.hpp  LogObserver.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  ShaderProgram.hpp  ShaderStore.hpp  SpeedGovernor.hpp  TesselationControlShader.hpp  TesselationEvaluationShader.hpp  TexturePoint.hpp  ThreadManager.hpp  TimberWolf.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexCollection.hpp  (+2 more)
include/TimberWolf/: Core.hpp  External.hpp  GameLoop.hpp  Graphics.hpp  Log.hpp  OpenGL.hpp  Window.hpp  World.hpp
include/TimberWolf/Core/: Clock.hpp  Color.hpp  Console.hpp  File.hpp  GlobalVertex.hpp  Gradient.hpp  Image.hpp  Math.hpp  Matrix3Double.hpp  Matrix4.hpp  Matrix4Double.hpp  MultiObservable.hpp  MultiReplayObservable.hpp  Normal.hpp  Observer.hpp  Pixel.hpp  Projection.hpp  Quaternion.hpp  Rotation.hpp  SingleObservable.hpp  SingleReplayObservable.hpp  SpeedGovernor.hpp  ThreadManager.hpp  Transformation.hpp  Vector2Double.hpp  Vector3Integer.hpp  Vertex.hpp
include/TimberWolf/FileSystem/: File.hpp
include/TimberWolf/GameLoop/: Controller.hpp  GameLoop.hpp  GameState.hpp  GameStateManager.hpp  GameStateStore.hpp  KeyAction.hpp  KeyMod.hpp  KeyType.hpp  Keybinding.hpp
include/TimberWolf/Graphics/: Camera.hpp  GLBufferable.hpp  GraphicsBufferable.hpp  Material.hpp  MaterialHandle.hpp  Mesh.hpp  MeshHandle.hpp  Model.hpp  ModelFragment.hpp  Puppet.hpp  Renderer.hpp  Scene.hpp  Texture.hpp  TexturePoint.hpp  Vertex.hpp  VertexCollection.hpp  VertexSet.hpp
include/TimberWolf/Log/: ConsoleLogObserver.hpp  FileLogObserver.hpp  FunctionLogObserver.hpp  Log.hpp  LogLevel.hpp  LogObserver.hpp
include/TimberWolf/Window/: Window.hpp
include/TimberWolf/World/: Entity.hpp  PhysicsEntityComponent.hpp  World.hpp
source/TimberWolf/Core/: File.cpp  Gradient.cpp  Image.cpp  Observer.cpp  Pixel.cpp  Projection.cpp  Transformation.cpp
source/TimberWolf/FileSystem/: File.cpp
source/TimberWolf/GameLoop/: GameState.cpp  GameStateManager.cpp
source/TimberWolf/Graphics/: Camera.cpp  GraphicsBufferable.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelFragment.cpp  Puppet.cpp  Renderer.cpp  Scene.cpp  TexturePoint.cpp  VertexSet.cpp
source/TimberWolf/Window/: Window.cpp
source/TimberWolf/World/: EntityComponent.cpp
src/: Clock.cpp  Color.cpp  ComputeShader.cpp  Console.cpp  ConsoleLogObserver.cpp  Controller.cpp  File.cpp  FileLogObserver.cpp  FragmentShader.cpp  FunctionLogObserver.cpp  GLBufferable.cpp  GameLoop.cpp  GameState.cpp  GameStateManager.cpp  GameStateStore.cpp  GeometryShader.cpp  KeyMod.cpp  Keybinding.cpp  Log.cpp  LogObserver.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  ShaderStore.cpp  SpeedGovernor.cpp  TesselationControlShader.cpp  TesselationEvaluationShader.cpp  TexturePoint.cpp  ThreadManager.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexCollection.cpp  VertexShader.cpp  Window.cpp  config.hpp.in  event.rs  (+3 more)
src/TimberWolf/Core/: Clock.cpp  Color.cpp  Projection.cpp  Rotation.cpp  SpeedGovernor.cpp  ThreadManager.cpp  Transformation.cpp  Vertex.cpp
src/TimberWolf/GameLoop/: Controller.cpp  GameLoop.cpp  GameState.cpp  GameStateManager.cpp  GameStateStore.cpp
src/TimberWolf/Graphics/: Camera.cpp  GLBufferable.cpp  GraphicsBufferable.cpp  Material.cpp  Mesh.cpp  Model.cpp  Puppet.cpp  Renderer.cpp  TexturePoint.cpp  Vertex.cpp  VertexCollection.cpp  VertexSet.cpp
src/TimberWolf/Log/: LogObserver.cpp
src/TimberWolf/Window/: Window.cpp
src/TimberWolf/World/: Entity.cpp  EntityComponent.cpp  PhysicsEntityComponent.cpp  World.cpp
src/class/Clock/: Clock.cpp  Clock.hpp
src/class/Color/: Color.cpp  Color.hpp
src/class/Console/: Console.cpp  Console.hpp
src/class/ConsoleLogObserver/: ConsoleLogObserver.cpp  ConsoleLogObserver.hpp
src/class/Controller/: Controller.cpp  Controller.hpp
src/class/File/: File.cpp  File.hpp
src/class/FileLogObserver/: FileLogObserver.cpp  FileLogObserver.hpp
src/class/FunctionLogObserver/: FunctionLogObserver.cpp  FunctionLogObserver.hpp
src/class/GameLoop/: GameLoop.cpp  GameLoop.hpp
src/class/GameState/: GameState.cpp  GameState.hpp
src/class/GameStateManager/: GameStateManager.cpp  GameStateManager.hpp
src/class/GameStateStore/: GameStateStore.cpp  GameStateStore.hpp
src/class/KeyMod/: KeyMod.cpp  KeyMod.hpp
src/class/Keybinding/: Keybinding.cpp  Keybinding.hpp
src/class/Log/: Log.cpp  Log.hpp
src/class/LogObserver/: LogObserver.cpp  LogObserver.hpp
src/class/Model/: Model.cpp  Model.hpp
src/class/Renderer/: Renderer.cpp  Renderer.hpp
src/color/: mod.rs
src/context/: mod.rs  test.rs
src/dispatch/: mod.rs
src/event/: mod.rs  timing.rs
src/graphics/: directx11.rs  directx12.rs  metal.rs  mod.rs  opengl.rs  rendy.rs  vulkan.rs  window.rs
src/lifecycle/: mod.rs
src/log/: event.rs  mod.rs  output.rs  test.rs
src/services/: mod.rs
src/state/: entity.rs  mod.rs
src/test/: context.rs  log.rs  mod.rs
src/timing/: mod.rs  test.rs
src/turbine/: mod.rs
src/window/: mod.rs
test/: suite.cpp
(+142 files in other folders)
