[package]
name = "timberwolf"
version = "0.5.0"
authors = ["Alexander Barber <alex@dangerzonegames.com>"]
edition = "2018"
description = "a high-performance 3D-focused game engine"
license = "MIT"
repository = "https://github.com/DangerInteractive/TimberWolf"

[dependencies]
chrono = "0.4.10"
cgmath = "0.17.0"
winit = "0.19.5"
rendy = "0.5.1"
