[package]
name = "timberwolf"
version = "0.5.0"
authors = ["Alexander Barber <alex@dangerzonegames.com>"]
edition = "2018"
description = "a high-performance 3D-focused game engine"
license = "MIT"
repository = "https://github.com/DangerInteractive/TimberWolf"

[dependencies]
crossbeam = "0.8.2"
futures = "0.3.21"
log = "0.4.17"
rayon = "1.5.3"
