[package]
name = "wyrd"
version = "0.1.0"
authors = ["Alexander Barber <alex@dangerzonegames.com>"]
edition = "2018"
description = "an entity component system created for TimberWolf"
license = "MIT"
repository = "https://github.com/DangerInteractive/TimberWolf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
